feat: support publish to GitHub (#26)
* feat(ci): support publish to github

* fix: fix arguments passing consul script

* fix: consul startup parameters and typos

* fix: checkstyle errors

* fix: checkstyle errors

* fix: checkstyle errors

* fix: fix checkstyle errors